# pkg-types-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/cacher/: mod.rs
src/pkg_json/: field_enum.rs  mod.rs  package_json.rs
tests/: test_read_pkg_json.rs  test_write_pkg_json.rs
tests/fixture/: package.json
